--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "svg-sprite-loader": "^6.0.2",
     "vue": "^2.5.2",
     "vue-axios": "^3.2.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -39,7 +40,6 @@
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
     "node-notifier": "^5.1.2",
-    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
